--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700);
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 @import url(https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700);
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 
 
 
@@ -29,7 +29,7 @@ body {
   font-size: 2.24rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 3rem;
 }
 .display-2 > .mbr-iconfont {
@@ -1844,5 +1844,209 @@ body {
   .cid-qTkAaeaxX5 .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
+  }
+}
+.cid-rrjGO6iFpw {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rrjGO6iFpw .carousel-control {
+  background: #000;
+}
+.cid-rrjGO6iFpw .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rrjGO6iFpw .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rrjGO6iFpw .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-rrjGO6iFpw .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-rrjGO6iFpw .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-rrjGO6iFpw .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rrjGO6iFpw .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-rrjGO6iFpw .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-rrjGO6iFpw .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-rrjGO6iFpw .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-rrjGO6iFpw .cloneditem-1,
+.cid-rrjGO6iFpw .cloneditem-2,
+.cid-rrjGO6iFpw .cloneditem-3,
+.cid-rrjGO6iFpw .cloneditem-4,
+.cid-rrjGO6iFpw .cloneditem-5 {
+  display: none;
+}
+.cid-rrjGO6iFpw .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-rrjGO6iFpw .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides2 .cloneditem-1,
+  .cid-rrjGO6iFpw .carousel-inner.slides2 .cloneditem-2,
+  .cid-rrjGO6iFpw .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides3 .cloneditem-1,
+  .cid-rrjGO6iFpw .carousel-inner.slides3 .cloneditem-2,
+  .cid-rrjGO6iFpw .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides4 .cloneditem-1,
+  .cid-rrjGO6iFpw .carousel-inner.slides4 .cloneditem-2,
+  .cid-rrjGO6iFpw .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides5 .cloneditem-1,
+  .cid-rrjGO6iFpw .carousel-inner.slides5 .cloneditem-2,
+  .cid-rrjGO6iFpw .carousel-inner.slides5 .cloneditem-3,
+  .cid-rrjGO6iFpw .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-rrjGO6iFpw .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rrjGO6iFpw .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rrjGO6iFpw .carousel-inner.slides6 .cloneditem-1,
+  .cid-rrjGO6iFpw .carousel-inner.slides6 .cloneditem-2,
+  .cid-rrjGO6iFpw .carousel-inner.slides6 .cloneditem-3,
+  .cid-rrjGO6iFpw .carousel-inner.slides6 .cloneditem-4,
+  .cid-rrjGO6iFpw .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
   }
 }
